# Memory-Persistence

./: .gitignore  CLAUDE.md  README.md  docker-compose.yml
TiMemory/: .dockerignore  .env.example  Dockerfile  MEMORY.md  PLAN.md  __init__.py  celery_app.py  database.py  knowledge_graph_client.py  prompts.py  pyproject.toml  session_manager.py  tidb.py  tidb_vector.py  timemory.py
TiMemory/config/: __init__.py  base.py  timemory_config.py
TiMemory/core/: __init__.py  chat_service.py  memory_processor.py  summary_processor.py  summary_service.py  topic_detector.py  topic_processor.py
TiMemory/embedding/: openai.py
TiMemory/llms/: openai.py
TiMemory/models/: __init__.py  memory.py  message.py  session.py  summary.py
TiMemory/schemas/: __init__.py  memory.py  session.py  summary.py
TiMemory/session/: __init__.py  session_manager.py
TiMemory/tasks/: memory_tasks.py  worker_tasks.py
backend/: .dockerignore  .env.example  CLAUDE.md  Dockerfile  README.md  check_api_user.py  check_db.py  fix_schema.py  pyproject.toml  requirements.txt  run.py  test_auth.py  test_conversation_persistence.py  test_memory_persistence.py  test_update_method.py
backend/api/: index.py
backend/app/: __init__.py  config.py  database.py  main.py
backend/app/api/: admin.py  auth.py  chat.py
backend/app/api/v1/: chat.py
backend/app/core/: __init__.py  config.py  exceptions.py
backend/app/core/exceptions/: __init__.py
backend/app/db/: __init__.py  database.py
backend/app/db/models/: memories.py  message.py  session.py  user.py
backend/app/dependencies/: __init__.py  auth.py  memory.py  session.py  validation.py
backend/app/middleware/: __init__.py  exception_handler.py  request_id.py
backend/app/models/: __init__.py  memories.py  memory.py  message.py  user.py
backend/app/routers/: admin.py  chat.py
backend/app/schemas/: auth.py  chat.py  error.py  session.py  user.py
backend/app/services/: auth_middleware.py  auth_service.py  chat_service.py  cleanup_service.py  memory_service.py  session_service.py  user_service.py
backend/app/test/: memory-agent.py
backend/memory/: memory.py  prompts.py  tidb_vector.py  timem.py  timemory.py
backend/memory/embedding/: openai.py
backend/memory/llms/: openai.py
backend/memory/schemas/: memories.py
frontend/: .dockerignore  .env.example  CLAUDE.md  Dockerfile  README_FRONTEND.md  app.json  config.example.ts  debug-signin.js  index.html  metro.config.js  package-lock.json  package.json  tailwind.config.js  test-setup.js  vite.config.js
(+23 files in other folders)
