[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "timemory"
version = "0.1.0"
description = "TiMemory - Persistent memory system for AI chatbots using TiDB vector database"
dependencies = [
    "openai>=1.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "sqlalchemy>=2.0.0",
    "tidb-vector>=0.0.5",
    "celery>=5.0.0",
    "redis>=4.0.0",
    "python-dotenv>=1.0.0",
    "pymysql>=1.0.0",
    "httpx>=0.24.0",
    "logfire",
    "logfire[celery]",
]
requires-python = ">=3.9"

[tool.setuptools]
packages = ["TiMemory"]

[tool.setuptools.package-dir]
TiMemory = "."
