[project]
name = "timemory-backend"
version = "0.1.0"
description = "AI chatbot backend with persistent memory capabilities"
requires-python = ">=3.9"
dependencies = [
    "fastapi==0.115.13",
    "uvicorn==0.34.3",
    "sqlalchemy==2.0.41",
    "pymysql==1.1.1",
    "openai==1.88.0",
    "pydantic==2.11.7",
    "pydantic-settings==2.9.1",
    "python-dotenv==1.1.0",
    "typing-extensions==4.14.0",
    "pytidb",
    "logfire",
    "logfire[sqlalchemy]",
    "logfire[fastapi]",
    "timemory",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.uv]
dev-dependencies = []

[tool.uv.sources]
timemory = { path = "../TiMemory", editable = true }
